--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -1,11 +1,11 @@
 ---
-title: Startup Framework
-subtitle: Website Design
+title: TOP 3
+subtitle: Who are the three most famous ?
 layout: default
 modal-id: 5
 #date: 2014-07-14
 img: startup-framework.png
-thumbnail: startup-framework-thumbnail.png
+thumbnail: top3_thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
