--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -1,11 +1,11 @@
 ---
-title: Treehouse
-subtitle: Website Design
+title: Occupation
+subtitle: What are their occupations ?
 layout: default
 modal-id: 4
 #date: 2014-07-15
 img: treehouse.png
-thumbnail: treehouse-thumbnail.png
+thumbnail: occupations_thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
