--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -1,11 +1,11 @@
 ---
-title: Golden
-subtitle: Website Design
+title: Age
+subtitle: What age category is predominant ?
 layout: default
 modal-id: 3
 #date: 2014-07-16
 img: golden.png
-thumbnail: golden-thumbnail.png
+thumbnail: tranche-dage_thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
