--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -1,6 +1,6 @@
 ---
 title: Gender
-subtitle: What is the proportion of gender ? 
+subtitle: What are their gender ? 
 layout: default
 modal-id: 2
 #date: 2014-07-17
