--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -5,7 +5,7 @@ layout: default
 modal-id: 4
 #date: 2014-07-15
 img: treehouse.png
-thumbnail: roundicons_thumbnail.png
+thumbnail: roundicons-thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
