--- a/portfolio_post/countries/_posts/2014-07-16-project-3.markdown
+++ b/portfolio_post/countries/_posts/2014-07-16-project-3.markdown
@@ -1,11 +1,11 @@
 ---
-title: Switzerland
-subtitle: Which words are associated to the U.S. ?
+title: Mexico
+subtitle: How old are they ?
 layout: default
-modal-id: 2
-#date: 2014-07-14
-img: ch_map.png
-thumbnail: top3_thumbnail.jpg
+modal-id: 3
+#date: 2014-07-16
+img: mex_map_ok.png
+thumbnail: tranche-dage_thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
