--- a/portfolio_post/countries/_posts/2014-07-15-project-9.markdown
+++ b/portfolio_post/countries/_posts/2014-07-15-project-9.markdown
@@ -1,11 +1,11 @@
 ---
-title: Mexico
-subtitle: How old are they ?
+title: Norway
+subtitle: What are their occupations ?
 layout: default
-modal-id: 3
-#date: 2014-07-16
-img: mex_map_ok.png
-thumbnail: tranche-dage_thumbnail.png
+modal-id: 9
+#date: 2014-07-15
+img: nw_map.png
+thumbnail: roundicons-thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
