--- a/portfolio_post/countries/_posts/2014-07-16-project-8.markdown
+++ b/portfolio_post/countries/_posts/2014-07-16-project-8.markdown
@@ -1,11 +1,11 @@
 ---
-title: Norway
-subtitle: What are their occupations ?
+title: Mexico
+subtitle: How old are they ?
 layout: default
-modal-id: 4
-#date: 2014-07-15
-img: nw_map.png
-thumbnail: roundicons-thumbnail.png
+modal-id: 8
+#date: 2014-07-16
+img: mex_map_ok.png
+thumbnail: tranche-dage_thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
