--- a/portfolio_post/countries/_posts/2014-07-14-project-4.markdown
+++ b/portfolio_post/countries/_posts/2014-07-14-project-4.markdown
@@ -1,11 +1,11 @@
 ---
-title: TOP 3
-subtitle: Who are the three most famous ?
+title: Switzerland
+subtitle: What words are associated to Switzerland?
 layout: default
-modal-id: 5
-#date: 2014-07-14
-img: startup-framework.png
-thumbnail: top3_thumbnail.jpg
+modal-id: 4
+#date: 2014-07-15
+img: ch_map.png
+thumbnail: ch_thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
