--- a/portfolio_post/people/_posts/2014-07-13-project-10.markdown
+++ b/portfolio_post/people/_posts/2014-07-13-project-10.markdown
@@ -1,11 +1,10 @@
 ---
-title: Germany
-subtitle: What are their gender ? 
+title: Religions
+subtitle: What are their religions ?
 layout: default
 modal-id: 7
-#date: 2014-07-17
-img: de_map.png
-thumbnail: gender_thumbnail.jpg
+img: dreams.png
+thumbnail: religion_thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
