--- a/portfolio_post/people/_posts/2014-07-15-project-9.markdown
+++ b/portfolio_post/people/_posts/2014-07-15-project-9.markdown
@@ -1,10 +1,11 @@
 ---
-title: US
-subtitle: Where do they come from ?
+title: Occupation
+subtitle: What are their occupations ?
 layout: default
-modal-id: 6
-img: us_map.png
-thumbnail: countries_thumbnail.png
+modal-id: 9
+#date: 2014-07-15
+img: Village_ppl100_category.png
+thumbnail: roundicons-thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
