--- a/portfolio_post/people/_posts/2014-07-16-project-6.markdown
+++ b/portfolio_post/people/_posts/2014-07-16-project-6.markdown
@@ -1,10 +1,11 @@
 ---
-title: Countries
-subtitle: Where do they come from ?
+title: Age
+subtitle: How old are they ?
 layout: default
-modal-id: 1
-img: dreams.png
-thumbnail: countries_thumbnail.png
+modal-id: 6
+#date: 2014-07-16
+img: golden.png
+thumbnail: tranche-dage_thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
