--- a/portfolio_post/people/_posts/2014-07-18-project-7.markdown
+++ b/portfolio_post/people/_posts/2014-07-18-project-7.markdown
@@ -1,11 +1,10 @@
 ---
-title: Gender
-subtitle: What are their gender ? 
+title: Countries
+subtitle: Where do they come from ?
 layout: default
-modal-id: 2
-#date: 2014-07-17
-img: escape.png
-thumbnail: gender_thumbnail.jpg
+modal-id: 7
+img: dreams.png
+thumbnail: countries_thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
