--- a/portfolio_post/countries/_posts/2014-07-17-project-1.markdown
+++ b/portfolio_post/countries/_posts/2014-07-17-project-1.markdown
@@ -5,7 +5,7 @@ layout: default
 modal-id: 1
 #date: 2014-07-17
 img: de_map.png
-thumbnail: de_thumbnail.jpg
+thumbnail: de_thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
