--- a/portfolio_post/people/_posts/2014-07-11-project-11.markdown
+++ b/portfolio_post/people/_posts/2014-07-11-project-11.markdown
@@ -4,7 +4,7 @@ subtitle: Who are the three most famous ?
 layout: default
 modal-id: 11
 #date: 2014-07-14
-img: startup-framework.png
+img: top3.png
 thumbnail: top3_thumbnail.jpg
 alt: image-alt
 #project-date: April 2014
