--- a/portfolio_post/countries/_posts/2014-07-11-project-6.markdown
+++ b/portfolio_post/countries/_posts/2014-07-11-project-6.markdown
@@ -1,11 +1,11 @@
 ---
-title: Age
-subtitle: How old are they ?
+title: Switzerland
+subtitle: What words are associated to Switzerland?
 layout: default
 modal-id: 6
-#date: 2014-07-16
-img: dreams.png
-thumbnail: tranche-dage_thumbnail.png
+#date: 2014-07-15
+img: ch_map.png
+thumbnail: ch_thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
