--- a/portfolio_post/countries/_posts/2014-07-15-project-2.markdown
+++ b/portfolio_post/countries/_posts/2014-07-15-project-2.markdown
@@ -1,11 +1,10 @@
 ---
-title: Mexico
-subtitle: What words are associated to Mexico?
+title: United Kingdom
+subtitle: What words are associated to the UK?
 layout: default
 modal-id: 2
-#date: 2014-07-16
-img: mex_map_ok.png
-thumbnail: mex_thumbnail.png
+img: uk_map.png
+thumbnail: uk_thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
