--- a/portfolio_post/countries/_posts/2014-07-16-project-1.markdown
+++ b/portfolio_post/countries/_posts/2014-07-16-project-1.markdown
@@ -1,11 +1,10 @@
 ---
-title: Germany
-subtitle: What words are associated to Germany? 
+title: US
+subtitle: What words are associated to the US?
 layout: default
 modal-id: 1
-#date: 2014-07-17
-img: de_map.png
-thumbnail: de_thumbnail.png
+img: us_map.png
+thumbnail: us_thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
