--- a/portfolio_post/people/_posts/2014-07-14-project-9.markdown
+++ b/portfolio_post/people/_posts/2014-07-14-project-9.markdown
@@ -1,10 +1,11 @@
 ---
-title: Countries
-subtitle: Where do they come from ?
+title: Gender
+subtitle: What are their gender ? 
 layout: default
-modal-id: 7
+modal-id: 9
+#date: 2014-07-17
 img: dreams.png
-thumbnail: countries_thumbnail.png
+thumbnail: gender_thumbnail.jpg
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
