--- a/portfolio_post/people/_posts/2014-07-15-project-8.markdown
+++ b/portfolio_post/people/_posts/2014-07-15-project-8.markdown
@@ -1,11 +1,10 @@
 ---
-title: TOP 3
-subtitle: Who are the three most famous ?
+title: Countries
+subtitle: Where do they come from ?
 layout: default
-modal-id: 11
-#date: 2014-07-14
-img: top3.png
-thumbnail: top3_thumbnail.jpg
+modal-id: 8
+img: dreams.png
+thumbnail: countries_thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
