--- a/portfolio_post/people/_posts/2014-07-15-project-9.markdown
+++ b/portfolio_post/people/_posts/2014-07-15-project-9.markdown
@@ -1,11 +1,10 @@
 ---
-title: Age
-subtitle: How old are they ?
+title: Countries
+subtitle: Where do they come from ?
 layout: default
-modal-id: 7
-#date: 2014-07-16
-img: dreams.png
-thumbnail: tranche-dage_thumbnail.png
+modal-id: 9
+img: Village_ppl100_nationalitiespeople.png
+thumbnail: continents_thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
