--- a/portfolio_post/people/_posts/2014-07-13-project-11.markdown
+++ b/portfolio_post/people/_posts/2014-07-13-project-11.markdown
@@ -1,11 +1,11 @@
 ---
-title: TOP 3
-subtitle: Who are the three most famous ?
+title: Language
+subtitle: What do they speak ?
 layout: default
-modal-id: 12
-#date: 2014-07-14
-img: top3.png
-thumbnail: top3_thumbnail.jpg
+modal-id: 11
+#date: 2014-07-15
+img: Village_ppl100_langugaespeople.png
+thumbnail: roundicons-thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
