--- a/portfolio_post/people/_posts/2014-07-14-project-10.markdown
+++ b/portfolio_post/people/_posts/2014-07-14-project-10.markdown
@@ -2,9 +2,9 @@
 title: Gender
 subtitle: What are their gender ? 
 layout: default
-modal-id: 9
+modal-id: 10
 #date: 2014-07-17
-img: dreams.png
+img: Village_ppl100_gender.png
 thumbnail: gender_thumbnail.jpg
 alt: image-alt
 #project-date: April 2014
