Minor text/pres changes

--- a/portfolio_post/countries/_posts/2014-07-11-project-6.markdown
+++ b/portfolio_post/countries/_posts/2014-07-11-project-6.markdown
@@ -1,6 +1,6 @@
 ---
 title: Switzerland
-subtitle: What words are associated to Switzerland?
+#subtitle: What words are associated to Switzerland?
 layout: default
 modal-id: 6
 #date: 2014-07-15
