--- a/portfolio_post/countries/_posts/2014-07-16-project-1.markdown
+++ b/portfolio_post/countries/_posts/2014-07-16-project-1.markdown
@@ -1,6 +1,6 @@
 ---
 title: US
-subtitle: What words are associated to the US?
+#subtitle: What words are associated to the US?
 layout: default
 modal-id: 1
 img: us_map.png
