--- a/portfolio_post/countries/_posts/2014-07-12-project-5.markdown
+++ b/portfolio_post/countries/_posts/2014-07-12-project-5.markdown
@@ -1,6 +1,6 @@
 ---
 title: Mexico
-subtitle: What words are associated to Mexico?
+#subtitle: What words are associated to Mexico?
 layout: default
 modal-id: 5
 #date: 2014-07-16
