--- a/portfolio_post/countries/_posts/2014-07-13-project-4.markdown
+++ b/portfolio_post/countries/_posts/2014-07-13-project-4.markdown
@@ -1,6 +1,6 @@
 ---
 title: Germany
-subtitle: What words are associated to Germany? 
+#subtitle: What words are associated to Germany? 
 layout: default
 modal-id: 4
 #date: 2014-07-17
