--- a/portfolio_post/people/_posts/2014-07-15-project-9.markdown
+++ b/portfolio_post/people/_posts/2014-07-15-project-9.markdown
@@ -4,7 +4,7 @@ subtitle: What is their nationality ?
 layout: default
 modal-id: 9
 img: Village_ppl100_nationalitiespeople.png
-thumbnail: continents_thumbnail.png
+thumbnail: countries_thumbnail.png
 alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
