Justify text portfolio

--- a/portfolio_post/people/_posts/2014-07-17-project-7.markdown
+++ b/portfolio_post/people/_posts/2014-07-17-project-7.markdown
@@ -10,6 +10,6 @@ alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
 #category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+description: What a surprise! The vast majority of the WikiPeople turns out to be dead. Apparently, the WikiWorld is therefore mainly composed of WikiZombies…  Among the twelve WikiPeople alive, the youngest one belongs to the 40+ years old category.
 
 ---
