--- a/portfolio_post/countries/_posts/2014-07-16-project-1.markdown
+++ b/portfolio_post/countries/_posts/2014-07-16-project-1.markdown
@@ -9,5 +9,5 @@ alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
 #category: Web Development
-description: The most thought of Wikipedia article when looking for the United States is *Baker Island*, which is an uninhabited island that is indeed part of the United States and lies in the time zone UTC-12:00, which means it will be the last place on Earth to experience the end of this day and say good night! The second biggest word is <p class="fst-italic">American Samoa</p>. It is another atoll that is known as the southernmost territory of the United States. <br><br> We see that some words can be reattached to the cultural tradition of the country, as the typical American citizen (according to Wikipedia of course) eats <p class="fst-italic">Domesticated Turkey</p> on Thanksgiving and watches <p class="fst-italic">Football</p> during the Super Bowl on TV, between two commercial <p class="fst-italic">Advertisements</p> while drinking their <p class="fst-italic">Beer</p>. <br><br> As the country with most centrality, the United States has a large panel of words, spanning from music, with <p class="fst-italic">Igor Stravinsky</p> that spent his last thirty years in the US (and there became involved in film music production, such as the Fantasia movie!) to science with the <p class="fst-italic">Hubble Space Telescope</p> and <p class="fst-italic">Albert Einstein</p> that emigrated there fleeing the Second World War. We can also notice historical events, such as the Vietnam war, the Cold war and WWII, that might be hidden under the words <p class="fst-italic">Vietnam</p>, <p class="fst-italic">Soviet Union</p> and <p class="fst-italic">Japan</p>, and even the foreign policy is conveyed through <p class="fst-italic">Israel</p>, which is a <a href="https://en.wikipedia.org/wiki/Israel%E2%80%93United_States_relations">strategic ally</a> of the US in the Middle East.<br> The map of words might even teach you some facts. For instance, Whale might be there because <a href="https://en.wikipedia.org/wiki/Whaling_in_the_United_States#Peak">whaling</a> was a big industry in the United States in the 19th century, as whale oil was the primary lubricant for machinery, therefore in much need during the Industrial Revolution, before being replaced by petroleum lubricants.
+description: The most thought of Wikipedia article when looking for the United States is *Baker Island*, which is an uninhabited island that is indeed part of the United States and lies in the time zone UTC-12:00, which means it will be the last place on Earth to experience the end of this day and say good night! The second biggest word is *American Samoa*. It is another atoll that is known as the southernmost territory of the United States. <br><br> We see that some words can be reattached to the cultural tradition of the country, as the typical American citizen (according to Wikipedia of course) eats *Domesticated Turkey* on Thanksgiving and watches *Football* during the Super Bowl on TV, between two commercial *Advertisements* while drinking their *Beer*. <br><br> As the country with most centrality, the United States has a large panel of words, spanning from music, with *Igor Stravinsky* that spent his last thirty years in the US (and there became involved in film music production, such as the Fantasia movie!) to science with the *Hubble Space Telescope* and *Albert Einstein* that emigrated there fleeing the Second World War. We can also notice historical events, such as the Vietnam war, the Cold war and WWII, that might be hidden under the words *Vietnam*, *Soviet Union* and *Japan*, and even the foreign policy is conveyed through *Israel*, which is a <a href="https://en.wikipedia.org/wiki/Israel%E2%80%93United_States_relations">strategic ally</a> of the US in the Middle East.<br> The map of words might even teach you some facts. For instance, Whale might be there because <a href="https://en.wikipedia.org/wiki/Whaling_in_the_United_States#Peak">whaling</a> was a big industry in the United States in the 19th century, as whale oil was the primary lubricant for machinery, therefore in much need during the Industrial Revolution, before being replaced by petroleum lubricants.
 ---
