All texts countries

--- a/portfolio_post/countries/_posts/2014-07-11-project-6.markdown
+++ b/portfolio_post/countries/_posts/2014-07-11-project-6.markdown
@@ -10,6 +10,6 @@ alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
 #category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+description: Geographically, Switzerland is located at the heart of *Europe* and next to *France*, with which Switzerland shares one of its four official languages. Interestingly enough, it is not one of them that is linked to the country, but *English language*.<br><br> Switzerland hosts the headquarters of many international organizations such as the *United Nations*, which has one of its four major offices in Geneva. Even if Switzerland is not part of the *European Union*, they have a strong and involved common history and have set several bilateral treaties over the years. <br><br> The *19th century* is key in Switzerland's history. Indeed, its neutrality has been recognized by powerful European countries during the Paris treaty in 1815 and its first constitution has been written in 1848. *World War II* also plays a key role in Switzerland's history, when its neutrality has been questioned by Allied countries and Germany. Between 10 May and 20 June 1940, some <a href="https://fr.wikipedia.org/wiki/Incidents_aériens_en_Suisse_de_1940">aerial incidents</a> took place between Switzerland Air force (called *Luftwaffe* in Swiss German) and Nazi Germany *Luftwaffe*.<br><br> Italian leader *Benito Mussolini* is also linked to Switzerland, since Lausanne University delivered him a doctorate honoris causa and he spent many years there.<br><br> The European Organization for Nuclear Research (CERN) is located in an international site between Switzerland and France and is famous among other things for its invention of the *World Wide Web* ! <br><br>
 
 ---
