--- a/portfolio_post/countries/_posts/2014-07-12-project-5.markdown
+++ b/portfolio_post/countries/_posts/2014-07-12-project-5.markdown
@@ -10,6 +10,6 @@ alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
 #category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+description: Mexico is the cradle of the *Maya civilization*. *Tobacco* also originates from the country and was used since 1400-1000 BC by Mexican tribes, before being diffused worldwide with Spanish colonization. After the country got its independence from *Spain*, it was briefly <a href="https://en.wikipedia.org/wiki/Second_French_intervention_in_Mexico">invaded</a> by Napoleon III, the emperor of France.<br><br> Its geographical position, between South and *North America*, and Atlantic and *Pacific Ocean*, makes it a passage for all kinds of different animal and vegetal species. Unfortunately the *Invasive Species* are the main <a href="https://en.wikipedia.org/wiki/Invasive_species_in_Mexico">cause</a> of the loss of biodiversity in the country.<br><br> On the cultural plan, Mexico 1968 Summer *Olympic Games* are famous for being the first to have used electronic timekeeping equipment. The event also occurred days after a violent repression by the government of a peaceful <a href="https://en.wikipedia.org/wiki/Mexican_Movement_of_1968">student demonstration</a> that led to hundreds killed and thousands arrested, which therefore left a mark in the collective memory. One of its universities is also named after *Albert Einstein*.<br><br>
 
 ---
