--- a/portfolio_post/countries/_posts/2014-07-13-project-4.markdown
+++ b/portfolio_post/countries/_posts/2014-07-13-project-4.markdown
@@ -10,6 +10,6 @@ alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
 #category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+description: You can notice that most of the words associated with Germany are about the Second World War and nazism. As Germany has a heavy historical background, the Wikispeedia gamers think of it first when they have to find it, as a lot of information will be available on Wikipedia about it. You can also see the aftermath of *World War II* with the occupation of the country by the *Soviet Union*. Some less known historical facts are hidden under words like *Tanzania*, which was part of the colonial past of Germany, or *Kenya*, which played an <a href="https://en.wikipedia.org/wiki/Kenya_in_World_War_II">important role</a> in WWII by furnishing a consequent number of soldiers to the British Army.<br><br> On a more positive note, physicists in Germany are also under the spotlight on this wordmap! They greatly contributed to the development of quantum physics in the first part of the twentieth century, with *Albert Einstein* that got the Nobel prize for the photoelectric effect and *Schroedinger* that was celebrated in the physics world for his equation, but that you certainly know for the paradox of his both dead and alive <a href="https://en.wikipedia.org/wiki/Schr%C3%B6dinger%27s_cat">cat</a>. Schroedinger was actually Danish but his name sounds German, which could have been confusing, although he lived in Germany before fleeing it in 1933 due to his strong opposition to Nazism. <br><br>
 
 ---
