--- a/portfolio_post/people/_posts/2014-07-11-project-13.markdown
+++ b/portfolio_post/people/_posts/2014-07-11-project-13.markdown
@@ -9,6 +9,6 @@ alt: image-alt
 #project-date: April 2014
 #client: Start Bootstrap
 #category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+description: Half of the WikiPeople meet at church on Sundays. They are Christians, the dominant religion in the main WikiCountries. This is not very surprising as <a href="https://en.wikipedia.org/wiki/Christianity">christianity</a> is the world's largest and most widespread religion with roughly 2.8 billion followers, representing one-third of the global population.<br> A non-negligible part of them are also <a href="https://en.wikipedia.org/wiki/Irreligion">irreligious</a>. Some other religions also seem to have emerged in the WikiWorld, but they struggle to attract new followers.<br><br>
 
 ---
